syntax = "proto3";

package reporting.service;

import "google/protobuf/timestamp.proto";

option java_package = "com.bg.reportingmicroservice.grpc";
option java_multiple_files = true;

message ReportResponse {
  string message = 1;
}